force-app/main/default/objects/smagicinteract__Disable_Triggers_Execution__c/smagicinteract__Disable_Triggers_Execution__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting allows administrators to disable certain triggers on SMS-Magic managed package.</description>
    <label>Disable Triggers Execution</label>
</CustomObject>