force-app/main/default/objects/smagicinteract__Disable_Triggers_Execution__c/fields/smagicinteract__Disable_Consent_Trigger__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Disable_Consent_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to disable the consent trigger</description>
    <label>Disable Consent Trigger</label>
    <type>Checkbox</type>
</CustomField>