force-app/main/default/objects/smagicinteract__Disable_Triggers_Execution__c/fields/smagicinteract__Disable_Incoming_Lookup__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Disable_Incoming_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to stop lookup and actions happening on incoming messages from managed package code.</description>
    <label>Disable Incoming Lookup</label>
    <type>Checkbox</type>
</CustomField>