force-app/main/default/objects/smagicinteract__Disable_Triggers_Execution__c/fields/smagicinteract__Disable_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Disable_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to stop migration of messages and conversations on lead migration.</description>
    <label>Disable Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>