force-app/main/default/objects/smagicinteract__Disable_Triggers_Execution__c/fields/smagicinteract__Disable_Mail_Sending__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Disable_Mail_Sending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to disable managed package code to send email notifications on incoming messages.</description>
    <label>Disable Mail Sending</label>
    <type>Checkbox</type>
</CustomField>