force-app/main/default/objects/smagicinteract__Disable_Triggers_Execution__c/fields/smagicinteract__Disable_Salesforce_Task__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Disable_Salesforce_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to disable sending of automated messages on salesforce task creation</description>
    <label>Disable Salesforce Task</label>
    <type>Checkbox</type>
</CustomField>