force-app/main/default/objects/smagicinteract__Disable_Triggers_Execution__c/fields/smagicinteract__Disable_SenderId_Trigger__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Disable_SenderId_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag decide whether to enable restrictions on senderId object or disable.</description>
    <inlineHelpText>This flag decide whether to enable restrictions on senderId object or disable.</inlineHelpText>
    <label>Disable SenderId Trigger</label>
    <type>Checkbox</type>
</CustomField>